# scripts

./: .gitignore  README.md  pyproject.toml
scripts/: run_polybar.py
