[tool.poetry]
name = "scripts"
version = "0.1.0"
description = "Shahin's personal script repository"
authors = ["Shahin <hi@shahinism.com>"]

[tool.poetry.dependencies]
python = "^3.10"
plumbum = "^1.7.2"
logzero = "^1.7.0"

[tool.poetry.dev-dependencies]
pdbpp = "^0.10.3"
black = "^22.1.0"

[tool.poetry.scripts]
run_polybar = "scripts.run_polybar:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
